samples/_failures_safe/1760884852_c0aaf5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab63d8bd.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_ab63d8bd.c:115:9: error: expected ‘,’ or ‘;’ at end of input
  115 |         double sign = (col % 2 == 0) ? 1.0 : -1.0
      |         ^~~~~~
./samples/SAFE/__tmp_ab63d8bd.c:115:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab63d8bd.c:115:9: error: expected declaration or statement at end of input
